# uMTP-Responder

./: .gitignore  CMakeLists.txt  umtp-responder.service
conf/: umtprd-ffs  umtprd-gfs  umtprd.conf
debian/: changelog  control  rules  umtp-responder.install
